--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Webiste im Aufbau</title>
+    <title>Website im Aufbau</title>
     <script type="module" src="./js/main.js"></script>
 </head>
 <body class="bg-dark text-light d-flex flex-column min-vh-100">
