--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <title>Website im Aufbau</title>
     <script type="module" src="./js/main.js"></script>
 </head>
-<body class="bg-dark text-light d-flex flex-column min-vh-100">
+<body class="d-flex flex-column min-vh-100">
 <main class="d-flex flex-grow-1 align-items-center justify-content-center">
-    <div class="container text-center">
+    <div class="container text-center" id="main-content">
         <h1>Work in Progress...</h1>
         <p class="mt-4">Diese Seite befindet sich derzeit noch im Aufbau</p>
     </div>
