--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Website im Aufbau</title>
     <script type="module" src="./js/main.js"></script>
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body>
 <main class="d-flex flex-grow-1 align-items-center justify-content-center">
     <div class="container text-center" id="main-content">
         <h1>Work in Progress...</h1>
