--- a/src/login/index.html
+++ b/src/login/index.html
@@ -30,7 +30,7 @@
   </div>
 </main>
 <script type="module">
-  import { initPage } from './js/main.js';
+  import { initPage } from '../js/main.js';
 
   if (document.readyState === 'loading') {
     document.addEventListener('DOMContentLoaded', initPage);
