add Pocketbase with signin and login functioniality

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     </div>
 </main>
 <script type="module">
-    import { initPage } from './js/main.js';
+    import { initPage } from './assets/js/main.js';
     if (document.readyState === 'loading') {
         document.addEventListener('DOMContentLoaded', initPage);
     } else {
