--- a/src/login/index.html
+++ b/src/login/index.html
@@ -6,23 +6,28 @@
   <title>Login</title>
 </head>
 <body>
-<main class="my-auto mx-auto p-4" id="register-main">
+<main class="my-auto mx-auto p-4" id="login-main">
   <div class="bg-body-secondary p-5 rounded-5 shadow-lg mx-auto" style="max-width: 500px;" id="main-content">
     <h2 class="text-start">Anmelden</h2>
-    <div>
-      <label class="mt-3 me-2 w-100 text-start">E-Mail
-        <input class="form-control form-control-md" name="email" type="email" placeholder="max@beispiel.de" required>
-      </label>
-    </div>
-    <div>
-      <label class="mt-3 me-2 w-100 text-start">Passwort
-        <input class="form-control form-control-md" name="password" type="password" placeholder="••••••••••••••••" required>
-      </label>
-    </div>
 
-    <div>
-      <button class="btn btn-primary mt-lg-4 w-100">Anmelden</button>
-    </div>
+    <div id="message-container" class="mt-3"></div>
+
+    <form id="login-form">
+      <div>
+        <label class="mt-3 me-2 w-100 text-start">E-Mail
+          <input class="form-control form-control-md" name="email" type="email" placeholder="max@beispiel.de" required>
+        </label>
+      </div>
+      <div>
+        <label class="mt-3 me-2 w-100 text-start">Passwort
+          <input class="form-control form-control-md" name="password" type="password" placeholder="••••••••••••••••" required>
+        </label>
+      </div>
+
+      <div>
+        <button type="button" id="login-button" class="btn btn-primary mt-lg-4 w-100">Anmelden</button>
+      </div>
+    </form>
 
     <div class="mt-4">
       <p class="text-center">Kein Account vorhanden? <a class="text-primary" href="/register">Registrierung</a></p>
@@ -30,12 +35,17 @@
   </div>
 </main>
 <script type="module">
-  import { initPage } from '../js/main.js';
+  import { initPage } from '../assets/js/main.js';
+  import { initLoginPage } from '../assets/js/login.js';
 
   if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', initPage);
+    document.addEventListener('DOMContentLoaded', () => {
+      initPage();
+      initLoginPage();
+    });
   } else {
     initPage();
+    initLoginPage();
   }
 </script>
 </body>
